# Pycon_Greece_2025_Presentation_Agents

./: .dockerignore  .gitignore  DEPLOYMENT.md  Dockerfile  LICENSE  PRD.md  PYCON_LIVE_DEMO_GUIDE.md  README.md  activate.sh  docker-compose.yml  docker-start.sh  docker-stop.sh  env.example  pyproject.toml  start_mcp_servers.sh
Fastapi_examples/: README.md  minimal_example.py  pydantic_data_validation_example.py  requirements.txt
Pydanticai_examples/: llm_vs_mcp_comparison_demo.py  mcp_calculator_server.py  requirements.txt  simple_agent.py
app/: __init__.py  main.py
app/agents/: __init__.py  base_agent.py  entry_agent.py  general_agent.py  specialist_agent.py
app/models/: __init__.py  requests.py  responses.py  schemas.py
app/services/: __init__.py  a2a_service.py  agent_manager.py  history_service.py  memory_service.py
app/utils/: __init__.py  config.py  date_extractor.py  logging.py  mcp_client.py
brave-search-mcp-custom/: Dockerfile  requirements.txt  run.py
data/: chat_history.json
data/chroma_db/: chroma.sqlite3
data/config/: ai_tools.json  mcp_servers.json  test_file.json
data/examples/: repository_metrics.json  tech_trends_sample.json
hackernews-mcp-custom/: Dockerfile  requirements.txt  run.py
mcp_servers/: brave_search_server.py  filesystem_server.py  github_server.py  hacker_news_server.py
scripts/: setup_mcp_servers.sh  setup_tech_tracker.sh  verify_setup.py
static/: app.js  index.html  styles.css
tests/: __init__.py  test_brave_integration.py  test_date_extraction.py  test_main.py  test_simple_date_extraction.py
